test/errhandling/errorMessages/taskerrors-remote-1.good
taskerrors-remote-1.chpl:6: error: assert failed - iterating over a TaskErrors object allocated on LOCALE1 while being on LOCALE0
